--- a/css/main.css
+++ b/css/main.css
@@ -30,9 +30,9 @@ body {
 .parent {
   background: var(--white);
   width: 280px;
-  padding: 15px 15px 0 15px;
+  padding: 15px 15px 6px 15px;
   border-radius: 10px;
-  box-shadow: 15px 10px 50px 6px var(--light-grey);
+  box-shadow: 0 10px 20px rgb(0 0 0 / 5%);
 }
 img {
   width: 100%;
@@ -48,12 +48,12 @@ h1 {
   font-weight: 700;
   font-size: 1.2rem;
   color: var(--dark-blue);
-  margin-bottom: 10px;
+  margin-bottom: 13px;
 }
 p {
   color: var(--dark-blue);
   opacity: 0.6;
   font-family: "Outfit", sans-serif;
   font-weight: 400;
-  font-size: 13px;
+  font-size: 12px;
 }
